Navbar shifted header fix

--- a/web-client/src/styles/tags/card.sass
+++ b/web-client/src/styles/tags/card.sass
@@ -7,7 +7,7 @@
 	position: relative
 	background: $white
 	border-radius: 2px
-	margin: auto auto $base-spacing/2
+	margin: 30px auto $base-spacing/2
 	padding: $base-spacing
 	max-width: 1640px
 	@extend %shadow
@@ -28,3 +28,6 @@
 	word-wrap: normal
 	overflow-wrap: normal
 	white-space: pre
+	
+.scrollableCard
+	margin-top: 30px
